--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+V 0.06A_220603
+  - Attempting to clear memory on program shutdown.
+      Exit code not implementd.
+  - The corrosponding versions are:
+    RasFLED (V 0.85A_220603) <==> rtl_airband (V 0.06A_220603)
+
 V 0.06A_220602
   - rtl_airband supports labels for each frequency in the .conf file.
     The following line was added after the freqs = ... line.
