V 0.07A_220605   - Changed the way the api works again in an attept to find clean       communication.   - The corrosponding versions are:     RasFLED (V 0.87A_220605) <==> rtl_airband (V 0.07A_220605)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+V 0.07A_220605
+  - Changed the way the api works again in an attept to find clean 
+      communication.
+  - The corrosponding versions are:
+    RasFLED (V 0.87A_220605) <==> rtl_airband (V 0.07A_220605)
+
 V 0.06A_220603
   - Attempting to clear memory on program shutdown.
       Exit code not implementd.
