--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+V 0.11A_220622
+  - Made changes to API to put tighter control over the Command Send and Command 
+      Receive channels.
+  - Airband can now receive Frequency Hold, Skip, and Clear all commands from the 
+      API.
+  - The corrosponding versions are:
+      RasFLED (V 0.93A_220622) <==> rtl_airband (V 0.11A_220622)
+
 V 0.10A_220609
   - Started adding channel control routines.
 
